--- a/src/main/scss/overlay.scss
+++ b/src/main/scss/overlay.scss
@@ -448,7 +448,7 @@ $overlay-border-radius: 5px;
         .text-wrapper {
           max-width: 90%;
           overflow: hidden;
-          height: $font-size-standard;
+          height: $line-height-standard;
         }
 
         .link-label {
@@ -458,7 +458,7 @@ $overlay-border-radius: 5px;
           }
         }
 
-        &.has-buttons.show-buttons {
+        &.has-buttons {
           padding: 0;
           background-color: transparent;
           display: flex;
@@ -468,8 +468,9 @@ $overlay-border-radius: 5px;
           & > div {
             background-color: $color-white;
             display: flex;
-            align-items: stretch;
-            padding: 12px;
+            align-items: center;
+            padding: 0 12px;
+            height: 37px;
             border-radius: 3px;
 
             i {
@@ -486,10 +487,8 @@ $overlay-border-radius: 5px;
             flex: 1;
             justify-content: space-between;
 
-            & > a {
-              display: block;
+            a {
               width: 100%;
-              height: 100%;
             }
           }
 
