--- a/src/main/scss/variables.scss
+++ b/src/main/scss/variables.scss
@@ -68,6 +68,7 @@ $font-sec: $font-main;
 // Font sizes ----------------------------------- //
 $font-size-base: 10px;
 $font-size-standard: 1.3rem;
+$line-height-standard: 14px;
 
 // Spaces ----------------------------------- //
 $space-padding-header: 5%;
